--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.301",
+    "react-simple-typewriter": "^5.0.1",
     "swiper": "^11.2.10",
     "three": "^0.178.0"
   },
